<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_pokedex">

    <fragment
        android:id="@+id/navigation_pokedex"
        android:name="com.example.mypokedexapp.ui.pokedex.PokedexFragment"
        android:label="@string/title_pokedex"
        tools:layout="@layout/fragment_pokedex" >
        <action
            android:id="@+id/action_navigation_pokedex_to_navigation_pokemon_detail"
            app:destination="@id/navigation_pokemon_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_team"
        android:name="com.example.mypokedexapp.ui.team.TeamFragment"
        android:label="@string/title_team"
        tools:layout="@layout/fragment_team" >
        <action
            android:id="@+id/action_navigation_team_to_navigation_pokemon_detail"
            app:destination="@id/navigation_pokemon_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mypokedexapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_pokemon_detail"
            app:destination="@id/navigation_pokemon_detail" />
        <action
            android:id="@+id/action_navigation_profile_to_fragment_pokemon_create"
            app:destination="@id/fragment_pokemon_create" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.mypokedexapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_pokemon_detail"
        android:name="com.example.mypokedexapp.ui.pokemon.PokemonDetailFragment"
        android:label="@string/title_pokemon_details"
        tools:layout="@layout/fragment_pokemon_detail" />
    <fragment
        android:id="@+id/fragment_pokemon_create"
        android:name="com.example.mypokedexapp.fragment_pokemon_create"
        android:label="fragment_pokemon_create"
        tools:layout="@layout/fragment_pokemon_create" />

</navigation>